- Added class to GroupContainer - GroupContainer did not show scrollbars. Be careful with the VBox layout when the components do not have a fixed height.
git-svn-id: https://svn.cs.ru.nl/repos/iTask-system/trunk@918 63da3aa8-80fd-4f01-9db8-e6ea747a3da2

--- a/Client/src/static/skins/default/ttc.css
+++ b/Client/src/static/skins/default/ttc.css
@@ -26,3 +26,8 @@
 	border: 1px solid #99BBE8;
 	margin: 10px 0px 0px 10px;
 }
+
+/* Group Container */
+.GroupContainer {
+	background-color: #eee;
+}
